--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
     "name": "Canvas Demo",
     "description": "Salesforce Canvas Demo",
     "repository": "https://github.com/CodeScience/nodejs-canvas-app-sample",
-    "addons": ["heroku-postgresql:hobby-dev"],
+    "addons": ["heroku-postgresql:essential-0"],
     "env": {
         "OAUTH_UAF_CONSUMER_KEY": "21B5054D4C9D53D...",
         "OAUTH_WSF_CONSUMER_KEY": "21B5054D4C9D53D...",
